<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="org.orangecorn.corn.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/consumer_name"
            android:inputType="textPersonName"
            android:textColor="#BDBDBD"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_toppings"
            style="@style/TextApp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/toppings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_name" />

        <CheckBox
            android:id="@+id/check_box_salt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/salt"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_toppings" />

        <CheckBox
            android:id="@+id/check_box_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/sugar"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_box_salt" />

        <TextView
            android:id="@+id/text_view_quantity"
            style="@style/TextApp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_box_sugar" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:onClick="clickMinus"
            android:text="-"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_quantity" />

        <TextView
            android:id="@+id/text_view_0"
            style="@style/TextApp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="1"
            app:layout_constraintBaseline_toBaselineOf="@id/button_minus"
            app:layout_constraintLeft_toRightOf="@id/button_minus" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:onClick="clickPlus"
            android:text="+"
            app:layout_constraintBaseline_toBaselineOf="@id/text_view_0"
            app:layout_constraintLeft_toRightOf="@id/text_view_0"
            app:layout_constraintTop_toBottomOf="@id/text_view_quantity" />

        <Button
            android:id="@+id/button_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:isScrollContainer="true"
            android:onClick="sendOrder"
            android:text="@string/order_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_minus" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>

